# mpy-rpi-pico-w-simple-weather-client

./: .env.example  .gitignore  README.md  google_apps_script.js  pyproject.toml  test-1.py  test-2.py
firmware/: README.md
firmware/esp32_c6/: main.py
firmware/pico_w/: main.py
scripts/: flash.py  init_db.py
sql/: init.sql
src/pi5_hub/: __init__.py  alerts.py  apps_script_client.py  config.py  db.py  main.py  models.py  reports.py  repository.py  scheduler.py  sheets_client.py  slack_client.py
